Base layed down

--- a/Rebranding 2025/about.html
+++ b/Rebranding 2025/about.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Subconscious Specialist</title>
@@ -14,18 +9,15 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Subconscious Specialist - Tonyana Cruz</a></h1>
+						<h1><a href="index.html">Subconscious Specialist</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
-				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
@@ -35,13 +27,10 @@
 								<li><a href="services.html">Services</a></li>
 								<li><a href="kind-words.html">Kind Words</a></li>
 								<li><a href="contact.html">Contact</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
 							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
 
-				<!-- Wrapper -->
 					<section id="wrapper">
 						<header>
 							<div class="inner">
@@ -50,7 +39,6 @@
 							</div>
 						</header>
 
-						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
 
@@ -67,13 +55,13 @@
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Insights from Those Who’ve Soared</h3>
 											<p>Discover firsthand how clients have benefited from Tonyana’s intuitive guidance and practical wisdom. Explore their experiences and see why many continue to trust Tonyana as their Cosmic Catalyst.</p>
-											<a href="kind-words.html" class="special">Learn more</a>
+											<a href="kind-words.html" class="special">Kind Reviews</a>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Explore Intuitive Services Tailored for You</h3>
+											<h3 class="major">Explore Services Tailored for You</h3>
 											<p>Explore a range of intuitive services offered by Tonyana, including expert Tarot readings, insightful Astrology charts, and transformative Hypnotherapy sessions. Each service is carefully crafted to empower your own intuitive abilities and foster personal growth.</p>
-											<a href="services.html" class="special">Learn more</a>
+											<a href="services.html" class="special">My Services</a>
 										</article>
 									</section>
 
@@ -82,7 +70,6 @@
 
 					</section>
 
-				<!-- Footer -->
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Connect and Begin Your Journey</h2>
@@ -112,14 +99,13 @@
 								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy;2025 Subconscious Specialist All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
 
 			</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
