--- a/Rebranding 2025/index.html
+++ b/Rebranding 2025/index.html
@@ -15,10 +15,8 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Subconscious Specialist - Tonyana Cruz</a></h1>
 						<nav>
@@ -26,7 +24,6 @@
 						</nav>
 					</header>
 
-				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
@@ -43,7 +40,6 @@
 						</div>
 					</nav>
 
-				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
 							<div class="logo"><span class="icon fa-gem"></span></div>
@@ -53,10 +49,8 @@
 						</div>
 					</section>
 
-				<!-- Wrapper -->
 					<section id="wrapper">
 
-						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
@@ -68,7 +62,6 @@
 								</div>
 							</section>
 
-						<!-- Two -->
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
@@ -80,7 +73,6 @@
 								</div>
 							</section>
 
-						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
 									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -92,7 +84,6 @@
 								</div>
 							</section>
 
-				<!-- Footer -->
 				<section id="footer">
 					<div class="inner">
 						<h2 class="major">Connect and Begin Your Journey</h2>
@@ -122,14 +113,13 @@
 							<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;2025 Subconscious Specialist All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
 
 			</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
