--- a/Rebranding 2025/kind-words.html
+++ b/Rebranding 2025/kind-words.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
+		<title>Subconscious Specialist</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -14,74 +9,61 @@
 	</head>
 	<body class="is-preload">
 
-		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Subconscious Specialist</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
 					</header>
 
-				<!-- Menu -->
 					<nav id="menu">
 						<div class="inner">
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="about.html">About Me</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="kind-words.html">Kind Words</a></li>
+								<li><a href="contact.html">Contact</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
 					</nav>
 
-				<!-- Wrapper -->
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Client Experiences and Testimonials</h2>
+								<p>Hear directly from those who’ve experienced Tonyana’s intuitive guidance firsthand. These reviews highlight personal insights, transformative breakthroughs, and journeys toward empowered intuition.</p>
 							</div>
 						</header>
 
-						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<h3 class="major">Kristen from Cincinnati, OH - Nurse</h3>
+									<p>"I have known Tonyana for a few years after I met her at an event. I've since hosted her in my home
+										on a few occasions for parties. My friends who have come to have their readings definitely enjoy
+										her, as well as the social time we get while each person has their turn for her reading. The last
+										time she came, my husband had a reading done as well. The most amazing part of this reading is that
+										Tonyana lets you record your session. One afternoon about 3 months after our readings, we sat
+										together and listen to both of our recordings. We both couldn't believe in hindsight how accurate
+										she had been and her insight on our situation at the time and saw her guidance turned out to be spot
+										on. This girl definitely has a sixth sense about people. Not only that, she is incredibly genuine and kind and brings a positivity with her that I greatly appreciate and admire. I highly recommend
+										Tonyana for her Tarot readings." </p>
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
+									<h3 class="major">Kellie from Fairfield, OH - Learning and Development Consultant</h3>
+									<p>"Tonyana's readings are spot on. She brings such a tranquil energy and is an absolute pleasure to know.
+										I highly recommend her readings to gain clarity for yourself. She is a blessing."</p>
 
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-
+									<h3 class="major">Lequita from Cincinnati, OH - Nurse</h3>
+									<p>"I have been working with Tonyana through her Tarot for years now and just recently benefited from hypnosis sessions with her too. Honestly, her presence has really changed my thinking and I feel so much better these days! Negative worry type thoughts don't fester around in my mindset anymore like they used to. I'm way more positive and am doing new approaches that I would have never attempted before. She has really made a huge impact on my life. I remember our interactions exactly when I need them and know what to do. She has helped me remember and reclaim MY POWER!" </p>
 								</div>
 							</div>
 
 					</section>
 
-				<!-- Footer -->
 				<section id="footer">
 					<div class="inner">
 						<h2 class="major">Connect and Begin Your Journey</h2>
@@ -111,14 +93,13 @@
 							<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy;2025 Subconscious Specialist All rights reserved.</li>
 						</ul>
 					</div>
 				</section>
 
 			</div>
 
-		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
