--- a/Rebranding 2025/services.html
+++ b/Rebranding 2025/services.html
@@ -1,130 +1,237 @@
-<!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Generic - Solid State by HTML5 UP</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Generic - Solid State by HTML5 UP</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <div id="page-wrapper">
+      <header id="header">
+        <h1><a href="index.html">Subconscious Specialist</a></h1>
+        <nav>
+          <a href="#menu">Menu</a>
+        </nav>
+      </header>
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+      <nav id="menu">
+        <div class="inner">
+          <h2>Menu</h2>
+          <ul class="links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="kind-words.html">Kind Words</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+          <a href="#" class="close">Close</a>
+        </div>
+      </nav>
 
-				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+      <section id="wrapper">
+        <header>
+          <div class="inner">
+            <h2>Intuitive Services Designed for Your Growth</h2>
+            <p>
+              From expert Tarot readings to Astrology insights and empowering
+              Hypnotherapy sessions, [Name] provides personalized services
+              crafted to illuminate your path, strengthen your intuition, and
+              foster lasting personal transformation.
+            </p>
+          </div>
+        </header>
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
-						</div>
-					</nav>
+        <div class="wrapper">
+          <div class="inner">
+            <div class="table-wrapper">
+              <table>
+                <thead>
+                  <tr>
+                    <th>Time</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>30 minutes</td>
+                    <td>In-Person Reading</td>
+                    <td>$45</td>
+                  </tr>
+                  <tr>
+                    <td>30 minutes</td>
+                    <td>Phone Reading</td>
+                    <td>$40</td>
+                  </tr>
+                  <tr>
+                    <td>1 hour</td>
+                    <td>In-Person Reading</td>
+                    <td>$90</td>
+                  </tr>
+                  <tr>
+                    <td>1 hour</td>
+                    <td>Phone Reading</td>
+                    <td>$70</td>
+                  </tr>
+                  <tr>
+                    <td>--</td>
+                    <td><a href="https://www.voxer.com/">Voxer</a> Reading</td>
+                    <td>$40</td>
+                  </tr>
+                </tbody>
+              </table>
+              <table style="table-layout: fixed; width: 100%;">
+                <thead>
+                  <th>
+                    Private Party Pricing: Party of 6 or more, host is read
+                    FREE!
+                  </th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td style="width: 50%;">20 minute readings for each individual</td>
+                    <td style="width: 50%;">$35 per individual</td>
+                  </tr>
+                </tbody>
+              </table>
+              <p>
+                Hire me for your next business event! A treat for your patrons
+                and/or employees.
+              </p>
+              <table style="table-layout: fixed; width: 100%;">
+                <thead>
+                  <th>Business Event Pricing</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td style="width: 50%;">7 minute mini-readings for each person</td>
+                    <td style="width: 50%;">$135 per hour</td>
+                  </tr>
+                </tbody>
+              </table>
+              <p>
+                I am certified in Hypnosis and also am accredited through the
+                International Board of Coaches and Practitioners! If you would
+                like to delve into the depths of your mind as a 16 year
+                Professional Intuitive, consider hiring me for a Hypnosis
+                Session.
+              </p>
+              <table style="table-layout: fixed; width: 100%;">
+                <thead>
+                  <th>Hypnosis Session</th>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td style="width: 50%;">1 hour</td>
+                    <td style="width: 50%;">$135 per hour</td>
+                  </tr>
+                </tbody>
+              </table>
+              <div id="hyplogo">
+                <img src="images/ibcpemblem.png" alt="" />
+              </div>
+              <br />
+              <p id="disclaimer">
+                *By law, I have to state that my services are for entertainment
+                purposes only and I am in no way a doctor, lawyer, or financial
+                advisor. If you have a pre-existing mental health condition or
+                are experiencing symptoms of mental illness I urge you not to
+                work with me (or any reader) without the supervision of your
+                mental health professional. Your decisions are yours alone.
+              </p>
+            </div>
 
-				<!-- Wrapper -->
-					<section id="wrapper">
-						<header>
-							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
-							</div>
-						</header>
+            <section class="features">
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/pic04.jpg" alt=""
+                /></a>
+                <h3 class="major">Get to Know Your Sepcialist</h3>
+                <p>
+                  Learn more about Tonyana’s intuitive journey, credentials, and unique approach.
+                </p>
+                <a href="about.html" class="special">About Me</a>
+              </article>
+              <article>
+                <a href="#" class="image"
+                  ><img src="images/pic05.jpg" alt=""
+                /></a>
+                <h3 class="major">Connect with your Sepcialist</h3>
+                <p>
+					Reach out directly to start your own transformative experience.
+                </p>
+                <a href="contact.html" class="special">Contact</a>
+              </article>
+            </section>
+          </div>
+        </div>
+      </section>
 
-						<!-- Content -->
-							<div class="wrapper">
-								<div class="inner">
+      <section id="footer">
+        <div class="inner">
+          <h2 class="major">Connect and Begin Your Journey</h2>
+          <p>
+            Ready to unlock your intuitive potential? Reach out today to
+            schedule a session or ask questions. [Name] is eager to guide you
+            toward clarity and empowerment on your personal path.
+          </p>
+          <form
+            method="post"
+            action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317"
+          >
+            <div class="fields">
+              <div class="field">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+              </div>
+              <div class="field">
+                <label for="email">Email</label>
+                <input type="email" name="email" id="email" />
+              </div>
+              <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="4"></textarea>
+              </div>
+            </div>
+            <ul class="actions">
+              <li><input type="submit" value="Send Message" /></li>
+            </ul>
+          </form>
+          <ul class="contact">
+            <li class="icon solid fa-envelope">
+              <a href="#">libratarot@hotmail.com</a>
+            </li>
+            <li class="icon brands fa-facebook-f">
+              <a href="https://www.facebook.com/TarotByTonyana/"
+                >facebook.com/TarotByTonyana</a
+              >
+            </li>
+            <li class="icon brands fa-instagram">
+              <a href="https://www.instagram.com/subconscious_specialist"
+                >instagram.com/subconscious_specialist</a
+              >
+            </li>
+          </ul>
+          <ul class="copyright">
+            <li>&copy;2025 Subconscious Specialist All rights reserved.</li>
+          </ul>
+        </div>
+      </section>
+    </div>
 
-									<h3 class="major">Lorem ipsum dolor</h3>
-									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
-
-									<p>Vestibulum ultrices risus velit, sit amet blandit massa auctor sit amet. Sed eu lectus sem. Phasellus in odio at ipsum porttitor mollis id vel diam. Praesent sit amet posuere risus, eu faucibus lectus. Vivamus ex ligula, tempus pulvinar ipsum in, auctor porta quam. Proin nec commodo, vel scelerisque nisi scelerisque. Suspendisse id quam vel tortor tincidunt suscipit. Nullam auctor orci eu dolor consectetur, interdum ullamcorper ante tincidunt. Mauris felis nec felis elementum varius.</p>
-
-									<h3 class="major">Vitae phasellus</h3>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-
-								</div>
-							</div>
-
-					</section>
-
-				<!-- Footer -->
-				<section id="footer">
-					<div class="inner">
-						<h2 class="major">Connect and Begin Your Journey</h2>
-						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
-						<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
-							<div class="fields">
-								<div class="field">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field">
-									<label for="email">Email</label>
-									<input type="email" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="4"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><input type="submit" value="Send Message" /></li>
-							</ul>
-						</form>
-						<ul class="contact">
-							<li class="icon solid fa-envelope"><a href="#">libratarot@hotmail.com</a></li>
-							<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/TarotByTonyana/">facebook.com/TarotByTonyana</a></li>
-							<li class="icon brands fa-instagram"><a href="https://www.instagram.com/subconscious_specialist">instagram.com/subconscious_specialist</a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</section>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrollex.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
