Renaming images, colors

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/about1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Get to know me</h2>
 										<p>My specialty is Tarot, it is my go to as a professional Intuitive for the last 17 years.  I started out do very basic Astrology charts and that information certainly helps during a reading. I also offer Hypnosis to break the self-defeating patterns that show up in our lives. My thirst for metaphysical knowledge is insatiable but...</p>
