Pictures. Center logo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/services.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Services</h2>
 										<p>I offer a varity of different services. From affordable 20 minute sessions for getting you through that rough spot to full 1 hour hypnosis sessions to fully expand your mind and explore that Subconscious space. Click learn more to find my full services.</p>
@@ -75,7 +75,7 @@
 
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/about3.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Kind Words and Reviews</h2>
 										<p>I have a wide variety of clients and am also very lucky to have the very BEST clients. Click below to see a small sampling of what they have to say about my services.</p>
