--- a/services.html
+++ b/services.html
@@ -151,7 +151,7 @@
             <section class="features">
               <article>
                 <a href="#" class="image"
-                  ><img src="images/pic04.jpg" alt=""
+                  ><img src="images/about2.jpg" alt=""
                 /></a>
                 <h3 class="major">Get to Know Your Sepcialist</h3>
                 <p>
