More images. More tweaks based on some customer feedback.

--- a/about.html
+++ b/about.html
@@ -52,13 +52,13 @@
 
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/background1.jpg" alt="" /></a>
+											<a href="kind-words.html" class="image"><img src="images/background1.jpg" alt="" /></a>
 											<h3 class="major">Insights from Those Who’ve Soared</h3>
 											<p>Discover firsthand how clients have benefited from Tonyana’s intuitive guidance and practical wisdom. Explore their experiences and see why many continue to trust Tonyana as their Cosmic Catalyst.</p>
 											<a href="kind-words.html" class="special">Kind Reviews</a>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/contact1.jpg" alt="" /></a>
+											<a href="services.html" class="image"><img src="images/contact1.jpg" alt="" /></a>
 											<h3 class="major">Explore Services Tailored for You</h3>
 											<p>Explore a range of intuitive services offered by Tonyana, including expert Tarot readings, insightful Astrology charts, and transformative Hypnotherapy sessions. Each service is carefully crafted to empower your own intuitive abilities and foster personal growth.</p>
 											<a href="services.html" class="special">My Services</a>
