--- a/services.html
+++ b/services.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Generic - Solid State by HTML5 UP</title>
+    <title>Subconscious Specialist</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -150,18 +150,18 @@
 
             <section class="features">
               <article>
-                <a href="#" class="image"
+                <a href="about.html" class="image"
                   ><img src="images/about2.jpg" alt=""
                 /></a>
-                <h3 class="major">Get to Know Your Sepcialist</h3>
+                <h3 class="major">Get to Know Your Specialist</h3>
                 <p>
                   Learn more about Tonyana’s intuitive journey, credentials, and unique approach.
                 </p>
                 <a href="about.html" class="special">About Me</a>
               </article>
               <article>
-                <a href="#" class="image"
-                  ><img src="images/pic05.jpg" alt=""
+                <a href="contact.html" class="image"
+                  ><img src="images/background4.jpg" alt=""
                 /></a>
                 <h3 class="major">Connect with your Sepcialist</h3>
                 <p>
