Random stuff. I need to come back and redo a lot of this to be more DRY

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
 
 									<section class="features">
 										<article>
-											<a href="kind-words.html" class="image"><img src="images/background1.jpg" alt="" /></a>
+											<a href="kind-words.html" class="image"><img src="images/IMG_0187.png" alt="" /></a>
 											<h3 class="major">Insights from Those Who’ve Soared</h3>
 											<p>Discover firsthand how clients have benefited from Tonyana’s intuitive guidance and practical wisdom. Explore their experiences and see why many continue to trust Tonyana as their Cosmic Catalyst.</p>
 											<a href="kind-words.html" class="special">Kind Reviews</a>
@@ -73,7 +73,7 @@
 					<section id="footer">
 						<div class="inner">
 							<h2 class="major">Connect and Begin Your Journey</h2>
-							<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+							<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. Tonyana is eager to guide you toward clarity and empowerment on your personal path.</p>
 							<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
 								<div class="fields">
 									<div class="field">
