--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<div class="logo"><img class="icon" src="images/TonyanaLogo02A.png" alt=""></div>
 							<h1>Tonyana Cruz</h1>
 							<h2>The Subconscious Specalist</h2>
 							<p>I am a Transformational Intuitive Tarot Reader who also utilizes the power of working with Dream Interpretation and Hypnosis. Please, allow me to be your Subconscious Specialist! I check in with your energy to see where you are headed if you continue with the same mind-set and help you make more informed decisions. How can I help you?</p>
@@ -62,7 +62,7 @@
 
 							<section id="two" class="wrapper alt spotlight style2">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/services.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/IMG_0190.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Services</h2>
 										<p>I offer a varity of different services. From affordable 20 minute sessions for getting you through that rough spot to full 1 hour hypnosis sessions to fully expand your mind and explore that Subconscious space. Click learn more to find my full services.</p>
@@ -85,7 +85,7 @@
 				<section id="footer">
 					<div class="inner">
 						<h2 class="major">Connect and Begin Your Journey</h2>
-						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. Tonyana is eager to guide you toward clarity and empowerment on your personal path.</p>
 						<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
 							<div class="fields">
 								<div class="field">
