--- a/kind-words.html
+++ b/kind-words.html
@@ -67,7 +67,7 @@
 				<section id="footer">
 					<div class="inner">
 						<h2 class="major">Connect and Begin Your Journey</h2>
-						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+						<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. Tonyana is eager to guide you toward clarity and empowerment on your personal path.</p>
 						<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
 							<div class="fields">
 								<div class="field">
