--- a/services.html
+++ b/services.html
@@ -41,7 +41,7 @@
             <h2>Intuitive Services Designed for Your Growth</h2>
             <p>
               From expert Tarot readings to Astrology insights and empowering
-              Hypnotherapy sessions, [Name] provides personalized services
+              Hypnotherapy sessions, Tonyana provides personalized services
               crafted to illuminate your path, strengthen your intuition, and
               foster lasting personal transformation.
             </p>
@@ -151,7 +151,7 @@
             <section class="features">
               <article>
                 <a href="about.html" class="image"
-                  ><img src="images/about2.jpg" alt=""
+                  ><img src="images/background4.jpg" alt=""
                 /></a>
                 <h3 class="major">Get to Know Your Specialist</h3>
                 <p>
@@ -161,7 +161,7 @@
               </article>
               <article>
                 <a href="contact.html" class="image"
-                  ><img src="images/background4.jpg" alt=""
+                  ><img src="images/IMG_0188.png" alt=""
                 /></a>
                 <h3 class="major">Connect with your Sepcialist</h3>
                 <p>
@@ -179,7 +179,7 @@
           <h2 class="major">Connect and Begin Your Journey</h2>
           <p>
             Ready to unlock your intuitive potential? Reach out today to
-            schedule a session or ask questions. [Name] is eager to guide you
+            schedule a session or ask questions. Tonyana is eager to guide you
             toward clarity and empowerment on your personal path.
           </p>
           <form
