--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,15 @@
 						<header>
 							<div class="inner">
 								<h2>Connect and Begin Your Journey</h2>
-								<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. [Name] is eager to guide you toward clarity and empowerment on your personal path.</p>
+								<p>Ready to unlock your intuitive potential? Reach out today to schedule a session or ask questions. Tonyana is eager to guide you toward clarity and empowerment on your personal path.</p>
 							</div>
 						</header>
 
 							<div class="wrapper">
 								<div class="inner">
+									<div class="logo-list-item">
+										<img class="full-logo" src="images/TonyanaLogo01A.png" alt="">
+									</div>
 									<form method="post" action="https://formsubmit.co/7157a1748a1fcd48ba2053b1519f0317">
 										<div class="fields">
 											<div class="field">
