--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/about3.jpg" alt="" /></a>
+									<a href="#" class="image"><img src="images/about3_A.png" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Kind Words and Reviews</h2>
 										<p>I have a wide variety of clients and am also very lucky to have the very BEST clients. Click below to see a small sampling of what they have to say about my services.</p>
