--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<div class="inner">
 							<div class="logo"><img class="icon" src="images/TonyanaLogo02A.png" alt=""></div>
 							<h1>Tonyana Cruz</h1>
-							<h2>The Subconscious Specalist</h2>
+							<h2>The Subconscious Specialist</h2>
 							<p>I am a Transformational Intuitive Tarot Reader who also utilizes the power of working with Dream Interpretation and Hypnosis. Please, allow me to be your Subconscious Specialist! I check in with your energy to see where you are headed if you continue with the same mind-set and help you make more informed decisions. How can I help you?</p>
 						</div>
 					</section>
