Spelling error. Adjust years

--- a/services.html
+++ b/services.html
@@ -119,7 +119,7 @@
               <p>
                 I am certified in Hypnosis and also am accredited through the
                 International Board of Coaches and Practitioners! If you would
-                like to delve into the depths of your mind as a 16 year
+                like to delve into the depths of your mind as a 17 year
                 Professional Intuitive, consider hiring me for a Hypnosis
                 Session.
               </p>
@@ -163,7 +163,7 @@
                 <a href="contact.html" class="image"
                   ><img src="images/IMG_0188.png" alt=""
                 /></a>
-                <h3 class="major">Connect with your Sepcialist</h3>
+                <h3 class="major">Connect with your Specialist</h3>
                 <p>
 					Reach out directly to start your own transformative experience.
                 </p>
